--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -10,28 +10,85 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Friend Finder Survey</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
 
 <body>
     <div class="container">
         <div class="row">
-            <div class="col s12">
-                <div class="card">
-                    <div class="card-content">
-                        <h3>Welcome to Friend Finder</h3>
-                        <h5>Answer a few basic questions.</h5>
-                        <h5>Then find the friend with the greatest compatibility!</h5>
-                    </div>
-                    <div class="card-action">
-                        <a class="waves-effect waves-light btn">Go to Survey</a>
+            <div class="card">
+                <div class="card-content">
+                    <h3>Survey Questions</h3>
+                    <div class="row">
+                        <form>
+                            <div class="divider"></div>
+                            <div class="section">
+                                <h5>About You</h5>
+                                <div class="input-field col s12">
+                                    <input id="name" type="text" class="validate" required="" aria-required="true">
+                                    <label for="name">Name (Required)</label>
+                                </div>
+
+                                <div class="input-field col s12">
+                                    <input id="name" type="url" class="validate" required="" aria-required="true">
+                                    <label for="name">Link to Photo of You (Required)</label>
+                                </div>
+                            </div>
+
+
+                            <div class="input-field col s12">
+                                <div class="divider"></div>
+                                <div class="section">
+                                    <h5>Question 1</h5>
+                                    <h6>You make friends easily.</h6>
+                                    <select id="Q1" name="q1" class="validate" required="" aria-required="true">
+                                        <option value="" disabled selected>Choose your option</option>
+                                        <option value="1">1 (Strongly Disagree)</option>
+                                        <option value="2">2</option>
+                                        <option value="3">3</option>
+                                        <option value="4">4</option>
+                                        <option value="5">5 (Strongly Agree)</option>
+                                    </select>
+                                </div>
+                            </div>
+
+                            <div class="input-field col s12">
+                                <div class="section">
+                                    <h5>Question 2</h5>
+                                    <h6>You worry about things.</h6>
+                                    <select id="Q1" name="q1" class="validate" required="" aria-required="true">
+                                        <option value="" disabled selected>Choose your option</option>
+                                        <option value="1">1 (Strongly Disagree)</option>
+                                        <option value="2">2</option>
+                                        <option value="3">3</option>
+                                        <option value="4">4</option>
+                                        <option value="5">5 (Strongly Agree)</option>
+                                    </select>
+                                </div>
+                            </div>
+
+                            <div class="input-field col s12">
+                                <div class="divider"></div>
+                                <div class="section">
+                                    <button class="btn waves-effect waves-light" type="submit"
+                                        name="action">Submit</button>
+                                </div>
+                            </div>
+                        </form>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 
+
     <!--JavaScript at end of body for optimized loading-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script>
+        $(document).ready(function () {
+            $('select').formSelect();
+        });
+    </script>
 </body>
 
 </html>
